# AS04_TypeClasses

./: README.md  TypeClasses.cabal
Lang/: Imp.hs  Imp_Solution.hs  Tests.hs
Map/: Tests.hs  TreeMap.hs  TreeMap_Solution.hs
MapReduce/: Wordcount.hs  Wordcount_Solution.hs
TypeClasses/: Nat.hs  Nat_Solution.hs  Person.hs  Person_Solution.hs
